[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ra-one-analysis"
version = "0.1.0"
authors = [
    { name="Yash Bhusare", email="23yashbhusare@gmail.com" },
]
description = "A toolkit for radio burst injection and recovery analysis."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scipy",
     "your",
    "sigpyproc",
]

[project.scripts]
raftaar = "Raftaar:main"
ra-one = "Ra_one:main"
g-one = "G_one:main"
ra-completeness-plotter = "plot_combined_completeness:main"
ra-completeness-analyser = "completeness_analyser:main"
ra-sp2csv = "singlepulsetocsv:main"
ra-filter-sp = "filter_sp_by_results:main"
ra-converter = "converter:main"