[metadata]
name = RA_ONE
version = 0.1.0
description = Radio burst injection and recovery analysis toolkit

[options]
py_modules =
    Ra_one
    Raftaar
    G_one
    converter
    completeness_analyser
    plot_combined_completeness
    simulator
    singlepulsetocsv
    filter_sp_by_results

[options.entry_points]
console_scripts =
    raftaar = Raftaar:main
    ra-one = Ra_one:main
    g-one = G_one:main
    ra-completeness-plotter = plot_combined_completeness:main
    ra-completeness-analyser = completeness_analyser:main
    ra-sp2csv = singlepulsetocsv:main
    ra-filter-sp = filter_sp_by_results:main
    ra-converter = converter:main
